# advisoryDataPipeline

./: Dockerfile  README.md  docker-compose.yml  local-run.sh  pyproject.toml  pytest.ini  run.py
docker/: init-db.sql  load-data.sh
docker/pgadmin/: pgpass  servers.json
src/advisory_pipeline/: dependencies.py
src/advisory_pipeline/config/: __init__.py  config.py
src/advisory_pipeline/enrichment/: __init__.py  cache.py  config.py  definitions.py  pipeline.py
src/advisory_pipeline/enrichment/queries/: nvd_normalization.py  packages_to_enrich.py
src/advisory_pipeline/enrichment/schemas/: __init__.py  cache_schema.py  noramlized_schema.py  raw_nvd_schema.py
src/advisory_pipeline/enrichment/sources/: __init__.py  nvd.py  upstream_sources.py
src/advisory_pipeline/ingest/: __init__.py  config.py  definitions.py  ingestion_pipeline.py
src/advisory_pipeline/ingest/schemas/: echo_advisory_schema.py  not_applicable_schema.py
src/advisory_pipeline/pipeline_libs/: __init__.py
src/advisory_pipeline/pipeline_libs/aws/: __init__.py
src/advisory_pipeline/pipeline_libs/local/: __init__.py
src/advisory_pipeline/pipeline_libs/spark/: __init__.py  spark_utils.py
src/advisory_pipeline/state_machine/: __init__.py  config.py  pipeline.py  state_transitions.py  udf.py
src/advisory_pipeline/state_machine/queries/: map_new_info_with_udf.py  upsert_data.py
src/advisory_pipeline/state_machine/schemas/: state.py
test/: __init__.py  conftest.py  test_config.py  test_definitions.py  test_queries.py  test_schemas.py  test_state_transitions.py
(+10 files in other folders)
